Player selection finished

--- a/src/app/dashboard/character-assign/character-assign.page.html
+++ b/src/app/dashboard/character-assign/character-assign.page.html
@@ -1,9 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>character-assign</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button text="" icon="chevron-back-outline" defaultHref="dashboard">
+            </ion-back-button>
+        </ion-buttons>
+        <ion-title class="ion-text-center">{{"CharacterAssign.title" | translate}}</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
 </ion-content>
