--- a/src/global.scss
+++ b/src/global.scss
@@ -30,7 +30,7 @@
     --ion-color-primary-rgb: 217, 164, 59;
     --ion-color-primary-contrast: #000000;
     --ion-color-primary-contrast-rgb: 0, 0, 0;
-    --ion-color-primary-shade: #a87f2d;
+    --ion-color-primary-shade: #836323ae;
     --ion-color-primary-tint: #f0b642;
 
     --ion-color-secondary: #630f0f;
