--- a/src/app/dashboard/character-selection/character-selection.page.scss
+++ b/src/app/dashboard/character-selection/character-selection.page.scss
@@ -4,10 +4,39 @@
         --bar-height: 4px;
     }
 
-    .town-players {
+    .scroll-players {
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
         overflow-x: scroll;
+        scrollbar-color: var(--ion-color-primary) var(--ion-color-primary-shade);
+        scrollbar-width: thin;
+    }
+
+    .section-title {
+        position: relative;
+
+        &:after {
+            content: "";
+            position: absolute;
+            height: 10px;
+            bottom: -16px;
+            left: 30%;
+            right: 30%;
+            background-image: url("/assets/img/bottom.png");
+            background-position: center;
+            background-size: contain;
+        }
+    }
+
+    .civilians-count-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        p {
+            font-size: 2rem;
+            margin-top: 0;
+        }
     }
 }
