--- a/src/app/dashboard/character-assign/character-assign.page.html
+++ b/src/app/dashboard/character-assign/character-assign.page.html
@@ -9,4 +9,81 @@
 </ion-header>
 
 <ion-content>
+    <ion-grid class="character-assign-grid">
+        <ion-row>
+            <ion-col size="12">
+                <ion-text color="primary">
+                    <h5 class="ion-text-center bold section-title">{{"Basic.town" | translate}}</h5>
+                </ion-text>
+            </ion-col>
+            <ion-col size="12">
+                <ion-row>
+                    <ion-col size="6" *ngFor="let player of townGamePlayers">
+                        <player-item [name]="player.name" [selected]="!!player.associated_name"></player-item>
+                        <ion-text color="primary">
+                            <p class="assign-title">{{ player.associated_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
+                        </ion-text>
+                    </ion-col>
+                </ion-row>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="12">
+                <ion-text color="primary">
+                    <h5 class="ion-text-center bold section-title">{{"Basic.mafia" | translate}}</h5>
+                </ion-text>
+            </ion-col>
+            <ion-col size="12">
+                <ion-row>
+                    <ion-col size="6" *ngFor="let player of mafiaGamePlayers">
+                        <player-item [name]="player.name" [selected]="!!player.associated_name"></player-item>
+                        <ion-text color="primary">
+                            <p class="assign-title">{{ player.associated_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
+                        </ion-text>
+                    </ion-col>
+                </ion-row>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="12">
+                <ion-text color="primary">
+                    <h5 class="ion-text-center bold section-title">{{"Basic.neutrals" | translate}}</h5>
+                </ion-text>
+            </ion-col>
+            <ion-col size="12">
+                <ion-row>
+                    <ion-col size="6" *ngFor="let player of neutralGamePlayers">
+                        <player-item [name]="player.name" [selected]="!!player.associated_name"></player-item>
+                        <ion-text color="primary">
+                            <p class="assign-title">{{ player.associated_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
+                        </ion-text>
+                    </ion-col>
+                </ion-row>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="12">
+                <ion-text color="primary">
+                    <h5 class="ion-text-center bold section-title">{{"Basic.cits" | translate}}</h5>
+                </ion-text>
+            </ion-col>
+            <ion-col size="12">
+                <ion-row>
+                    <ion-col size="6" *ngFor="let player of civiliansGamePlayers">
+                        <player-item [name]="player.name" [selected]="!!player.associated_name"></player-item>
+                        <ion-text color="primary">
+                            <p class="assign-title">{{ player.associated_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
+                        </ion-text>
+                    </ion-col>
+                </ion-row>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="12">
+                <ion-button class="bold" (click)="confirmSelection()" [disabled]="!playersAssignedProperly" expand="block" size="large">
+                    {{"CharacterAssign.confirm" | translate}}
+                </ion-button>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
