--- a/src/app/dashboard/character-assign/character-assign.page.html
+++ b/src/app/dashboard/character-assign/character-assign.page.html
@@ -19,9 +19,9 @@
             <ion-col size="12">
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of townGamePlayers">
-                        <player-item [name]="player.name" [selected]="!!player.associated_name"></player-item>
+                        <player-item [name]="player.name" [selected]="!!player.assign_name"></player-item>
                         <ion-text color="primary">
-                            <p class="assign-title">{{ player.associated_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
+                            <p class="assign-title" (click)="assignPlayer(player)">{{ player.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
                         </ion-text>
                     </ion-col>
                 </ion-row>
@@ -36,9 +36,9 @@
             <ion-col size="12">
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of mafiaGamePlayers">
-                        <player-item [name]="player.name" [selected]="!!player.associated_name"></player-item>
+                        <player-item [name]="player.name" [selected]="!!player.assign_name"></player-item>
                         <ion-text color="primary">
-                            <p class="assign-title">{{ player.associated_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
+                            <p class="assign-title" (click)="assignPlayer(player)">{{ player.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
                         </ion-text>
                     </ion-col>
                 </ion-row>
@@ -53,9 +53,9 @@
             <ion-col size="12">
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of neutralGamePlayers">
-                        <player-item [name]="player.name" [selected]="!!player.associated_name"></player-item>
+                        <player-item [name]="player.name" [selected]="!!player.assign_name"></player-item>
                         <ion-text color="primary">
-                            <p class="assign-title">{{ player.associated_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
+                            <p class="assign-title" (click)="assignPlayer(player)">{{ player.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
                         </ion-text>
                     </ion-col>
                 </ion-row>
@@ -70,9 +70,9 @@
             <ion-col size="12">
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of civiliansGamePlayers">
-                        <player-item [name]="player.name" [selected]="!!player.associated_name"></player-item>
+                        <player-item [name]="player.name" [selected]="!!player.assign_name"></player-item>
                         <ion-text color="primary">
-                            <p class="assign-title">{{ player.associated_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
+                            <p class="assign-title" (click)="assignPlayer(player)">{{ player.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
                         </ion-text>
                     </ion-col>
                 </ion-row>
