--- a/src/app/game/game.page.html
+++ b/src/app/game/game.page.html
@@ -1,9 +1,11 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>game</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+    <ion-grid class="game-grid">
+        <ion-row>
+            <ion-col size="12">
+                <ion-button class="bold" (click)="endGame()" expand="block" size="large">
+                    {{"Game.endGame" | translate}}
+                </ion-button>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
