--- a/src/app/dashboard/character-selection/character-selection.page.scss
+++ b/src/app/dashboard/character-selection/character-selection.page.scss
@@ -26,6 +26,7 @@
             background-image: url("/assets/img/bottom.png");
             background-position: center;
             background-size: contain;
+            background-repeat: no-repeat;
         }
     }
 
