--- a/src/app/shared/components/player-item/player-item.component.scss
+++ b/src/app/shared/components/player-item/player-item.component.scss
@@ -17,4 +17,8 @@
             background-image: url("/assets/img/frame-active.png");
         }
     }
+
+    .character-info {
+        vertical-align: middle;
+    }
 }
