--- a/src/app/dashboard/character-assign/character-assign.page.html
+++ b/src/app/dashboard/character-assign/character-assign.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-back-button text="" icon="chevron-back-outline" defaultHref="dashboard">
+            <ion-back-button text="" icon="chevron-back-outline" defaultHref="tabs/dashboard">
             </ion-back-button>
         </ion-buttons>
         <ion-title class="ion-text-center">{{"CharacterAssign.title" | translate}}</ion-title>
