--- a/src/app/dashboard/character-list/character-list.page.scss
+++ b/src/app/dashboard/character-list/character-list.page.scss
@@ -12,6 +12,7 @@
             background-image: url("/assets/img/bottom.png");
             background-position: center;
             background-size: contain;
+            background-repeat: no-repeat;
         }
     }
 
