--- a/src/app/shared/components/player-info-modal/player-info-modal.component.html
+++ b/src/app/shared/components/player-info-modal/player-info-modal.component.html
@@ -5,31 +5,30 @@
                 (click)="dismiss()">
             </ion-back-button>
         </ion-buttons>
-        <ion-title class="ion-text-center">{{ "CharacterAssign.assignTitle" | translate }}: {{"Characters." +
+        <ion-title class="ion-text-center">{{"Characters." +
             player.name | translate}}</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-grid class="assign-modal-grid">
+    <ion-grid class="player-info-modal-grid">
         <ion-row class="ion-justify-content-center">
             <ion-col size="8">
                 <ion-row>
-                    <ion-col size="12">
+                    <ion-col size="12" class="image-symbol">
                         <img [src]="'/assets/img/characters/' + player.name + '.png'">
                     </ion-col>
-                </ion-row>
-                <ion-row>
-                    <ion-col size="12">
-                        <ion-input #nameInput class="name-input bold" [(ngModel)]="assignName"
-                            placeholder="{{'CharacterAssign.passName' | translate}}"></ion-input>
+                    <ion-col size="12" class="symbol-container">
+                        <div  class="symbol">{{player.symbol}}</div>
                     </ion-col>
                 </ion-row>
                 <ion-row>
-                    <ion-col size="12">
-                        <ion-button class="bold" (click)="confirmAssign()" [disabled]="!assignName" expand="block">
-                            {{"CharacterAssign.save" | translate}}
-                        </ion-button>
+                    <ion-col size="12" class="image-symbol">
+                        <ion-text color="primary">
+                            <small>
+                                {{player.description}}
+                            </small>
+                        </ion-text>
                     </ion-col>
                 </ion-row>
             </ion-col>
