--- a/src/app/shared/components/player-item/player-item.component.html
+++ b/src/app/shared/components/player-item/player-item.component.html
@@ -1,11 +1,12 @@
 <div class="player-item-container" [class.selected]="selected">
     <ion-row>
-        <ion-col size="12" class="image-container">
+        <ion-col size="12" class="image-container" (click)="imageClick()">
             <img [src]="'/assets/img/characters/' + name + '.png'">
         </ion-col>
-        <ion-col size="12" class="ion-text-center">
+        <ion-col size="12" class="ion-text-center" (click)="labelClick()">
             <ion-text color="primary" class="bold">
                 {{"Characters." + name | translate}}
+                <span *ngIf="selectable" class="character-info"><ion-icon name="help-circle-outline"></ion-icon></span>
             </ion-text>
         </ion-col>
     </ion-row>
