Created basic structure for user store

--- a/src/app/dashboard/character-assign/character-assign.page.html
+++ b/src/app/dashboard/character-assign/character-assign.page.html
@@ -5,6 +5,9 @@
             </ion-back-button>
         </ion-buttons>
         <ion-title class="ion-text-center">{{"CharacterAssign.title" | translate}}</ion-title>
+        <ion-buttons slot="end" class="ion-margin-horizontal user-icon">
+            <ion-icon name="people" (click)="manageUsers()"></ion-icon>
+        </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
