--- a/src/app/dashboard/character-assign/character-assign.page.scss
+++ b/src/app/dashboard/character-assign/character-assign.page.scss
@@ -22,3 +22,13 @@
         font-size: .8rem;
     }
 }
+
+ion-buttons {
+    & ~ ion-title {
+        margin-left: 0 !important;
+    }
+
+    &.user-icon {
+        font-size: 1.5rem;
+    }
+}
