--- a/src/app/dashboard/character-assign/assign-modal/assign-modal.page.scss
+++ b/src/app/dashboard/character-assign/assign-modal/assign-modal.page.scss
@@ -10,4 +10,14 @@
         color: var(--ion-color-primary);
         border-radius: 5px;
     }
+
+    ion-list {
+        background: transparent;
+        padding: 0;
+    }
+
+    ion-button {
+        margin: 0;
+        margin-top: 1rem;
+    }
 }
