--- a/src/app/dashboard/character-list/character-list.page.html
+++ b/src/app/dashboard/character-list/character-list.page.html
@@ -17,7 +17,7 @@
                     <ion-col size="6" *ngFor="let player of townGamePlayers">
                         <player-item [name]="player.name" [selected]="true"></player-item>
                         <ion-text color="primary">
-                            <p class="assign-title">{{ player.assign_name }}</p>
+                            <p class="assign-title">{{ player.user?.assign_name }}</p>
                         </ion-text>
                     </ion-col>
                 </ion-row>
@@ -34,7 +34,7 @@
                     <ion-col size="6" *ngFor="let player of mafiaGamePlayers">
                         <player-item [name]="player.name" [selected]="true"></player-item>
                         <ion-text color="primary">
-                            <p class="assign-title">{{ player.assign_name }}</p>
+                            <p class="assign-title">{{ player.user?.assign_name }}</p>
                         </ion-text>
                     </ion-col>
                 </ion-row>
@@ -51,7 +51,7 @@
                     <ion-col size="6" *ngFor="let player of neutralGamePlayers">
                         <player-item [name]="player.name" [selected]="true"></player-item>
                         <ion-text color="primary">
-                            <p class="assign-title">{{ player.assign_name }}</p>
+                            <p class="assign-title">{{ player.user?.assign_name }}</p>
                         </ion-text>
                     </ion-col>
                 </ion-row>
@@ -68,7 +68,7 @@
                     <ion-col size="6" *ngFor="let player of civiliansGamePlayers">
                         <player-item [name]="player.name" [selected]="true"></player-item>
                         <ion-text color="primary">
-                            <p class="assign-title">{{ player.assign_name }}</p>
+                            <p class="assign-title">{{ player.user?.assign_name }}</p>
                         </ion-text>
                     </ion-col>
                 </ion-row>
