--- a/src/app/dashboard/character-assign/character-assign.page.html
+++ b/src/app/dashboard/character-assign/character-assign.page.html
@@ -5,14 +5,17 @@
             </ion-back-button>
         </ion-buttons>
         <ion-title class="ion-text-center">{{"CharacterAssign.title" | translate}}</ion-title>
-        <ion-buttons slot="end" class="ion-margin-horizontal user-icon">
-            <ion-icon name="people" (click)="manageUsers()"></ion-icon>
-        </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <ion-grid class="character-assign-grid">
+        <ion-row>
+            <ion-col size="12" class="buttons-container">
+                <ion-button size="small" (click)="manageUsers()">{{ "CharacterAssign.listManage" | translate }}</ion-button>
+                <ion-button size="small" (click)="assignAutomatically()">{{ "CharacterAssign.assignAutomatically" | translate }}</ion-button>
+            </ion-col>
+        </ion-row>
         <ion-row>
             <ion-col size="12">
                 <ion-text color="primary">
