--- a/src/app/dashboard/character-assign/user-manage-modal/user-manage.page.scss
+++ b/src/app/dashboard/character-assign/user-manage-modal/user-manage.page.scss
@@ -8,7 +8,7 @@
 
     .trash-container {
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
     }
 }
