--- a/src/app/dashboard/character-selection/character-selection.page.html
+++ b/src/app/dashboard/character-selection/character-selection.page.html
@@ -11,10 +11,11 @@
 <ion-content>
     <ion-grid class="character-selection-grid">
         <ion-row>
-            <ion-col size="12">
+            <ion-col size="12" class="ion-text-center">
                 <ion-text color="primary">
                     <h5 class="ion-text-center">{{"CharacterSelection.playersAmount" | translate}}</h5>
                 </ion-text>
+                <ion-button size="small" (click)="resetSelection()">{{ "CharacterSelection.reset" | translate }}</ion-button>
             </ion-col>
         </ion-row>
         <ion-row>
