--- a/src/app/shared/components/player-info-modal/player-info-modal.component.html
+++ b/src/app/shared/components/player-info-modal/player-info-modal.component.html
@@ -15,21 +15,43 @@
         <ion-row class="ion-justify-content-center">
             <ion-col size="8">
                 <ion-row>
-                    <ion-col size="12" class="image-symbol">
-                        <img [src]="'/assets/img/characters/' + player.name + '.png'">
+                    <ion-col size="12">
+                        <ion-segment value="info" [(ngModel)]="segment">
+                            <ion-segment-button value="info">
+                                {{"PlayerInfo.info" | translate}}
+                            </ion-segment-button>
+                            <ion-segment-button value="action">
+                                {{"PlayerInfo.action" | translate}}
+                            </ion-segment-button>
+                        </ion-segment>
                     </ion-col>
-                    <ion-col size="12" class="symbol-container">
-                        <div  class="symbol">{{player.symbol}}</div>
-                    </ion-col>
-                </ion-row>
-                <ion-row>
-                    <ion-col size="12" class="image-symbol">
-                        <ion-text color="primary">
-                            <small>
-                                {{player.description}}
-                            </small>
-                        </ion-text>
-                    </ion-col>
+
+                    <ng-container [ngSwitch]="segment">
+                        <ion-col size="12" *ngSwitchCase="'info'">
+                            <ion-row>
+                                <ion-col size="12" class="image-symbol">
+                                    <img [src]="'/assets/img/characters/' + player.name + '.png'">
+                                </ion-col>
+                                <ion-col size="12" class="symbol-container">
+                                    <div class="symbol">{{player.symbol}}</div>
+                                </ion-col>
+                            </ion-row>
+                            <ion-row>
+                                <ion-col size="12" class="image-symbol">
+                                    <ion-text color="primary">
+                                        <small>
+                                            {{player.description}}
+                                        </small>
+                                    </ion-text>
+                                </ion-col>
+                            </ion-row>
+                        </ion-col>
+                        <ion-col size="12" *ngSwitchCase="'action'">
+                            <ion-text color="primary">
+                                TUTAJ BĘDĄ MOŻLIWE DO WYKONANIA AKCJE NP. ZABICIE
+                            </ion-text>
+                        </ion-col>
+                    </ng-container>
                 </ion-row>
             </ion-col>
         </ion-row>
