--- a/src/app/shared/components/player-info-modal/player-info-modal.component.html
+++ b/src/app/shared/components/player-info-modal/player-info-modal.component.html
@@ -20,7 +20,7 @@
                             <ion-segment-button value="info">
                                 {{"PlayerInfo.info" | translate}}
                             </ion-segment-button>
-                            <ion-segment-button value="action">
+                            <ion-segment-button value="action" *ngIf="actionable">
                                 {{"PlayerInfo.action" | translate}}
                             </ion-segment-button>
                         </ion-segment>
