--- a/src/app/shared/components/player-info-modal/player-info-modal.component.scss
+++ b/src/app/shared/components/player-info-modal/player-info-modal.component.scss
@@ -7,7 +7,7 @@
             background-image: url("/assets/img/frame.png");
             background-repeat: no-repeat;
             background-position: center;
-            background-size: cover;
+            background-size: contain;
             font-size: 2.5rem;
             width: 6rem;
             height: 6rem;
